<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.musicplay.MusicPlayerActivity">

    <ImageView
        android:id="@+id/image_song_back_collapse"
        android:layout_width="@dimen/dp_30"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15"
        android:scaleType="fitXY"
        android:src="@drawable/ic_arrow_back_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/current_list"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@id/view_div"
        app:layout_constraintStart_toEndOf="@id/image_song_back_collapse"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_div"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/image_song_back_collapse" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_current_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:padding="@dimen/dp_10"
        android:visibility="gone"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/constraint_controler_contain"
        app:layout_constraintTop_toBottomOf="@+id/view_div" />

    <View
        android:id="@+id/view_div_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/constraint_controler_contain" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_controler_contain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_mischka"
        app:layout_constraintBottom_toBottomOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_summary"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_8"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="@dimen/dp_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_summary_next"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_8"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_summary_play"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_8"
            android:src="@drawable/ic_play_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/image_summary_next"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_summary_previous"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_8"
            android:src="@drawable/ic_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/image_summary_play"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_summary_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/image_summary"
            app:layout_constraintRight_toLeftOf="@id/image_summary_previous"
            app:layout_constraintTop_toTopOf="@id/image_summary" />

        <TextView
            android:id="@+id/text_summry_singer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@id/image_summary"
            app:layout_constraintLeft_toRightOf="@id/image_summary"
            app:layout_constraintRight_toLeftOf="@id/image_summary_previous" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contraint_expand_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:background="@drawable/song_banner" />

        <ImageView
            android:id="@+id/image_song_back_expand"
            android:layout_width="@dimen/dp_30"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_back_white"
            app:layout_constraintBottom_toTopOf="@id/card_song_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_hide_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@drawable/ic_arrow_drop_down"
            app:layout_constraintBottom_toTopOf="@id/card_song_container"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_song_container"
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_210"
            app:cardCornerRadius="@dimen/dp_4"
            app:cardElevation="@dimen/dp_15"
            app:contentPadding="@dimen/dp_4"
            app:layout_constraintBottom_toBottomOf="@id/view_banner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_banner">

            <ImageView
                android:id="@+id/image_song"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/music_banner" />
        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/image_playing_gif"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_song_container" />

        <TextView
            android:id="@+id/text_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_playing_gif" />

        <TextView
            android:id="@+id/text_song_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:textSize="@dimen/sp_18"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_song_name" />

        <ImageView
            android:id="@+id/image_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_50"
            android:src="@drawable/ic_access_alarms"
            app:layout_constraintBottom_toTopOf="@id/seek_bar"
            app:layout_constraintRight_toLeftOf="@id/image_download"
            app:layout_constraintTop_toBottomOf="@id/text_song_singer" />

        <ImageView
            android:id="@+id/image_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_file_download"
            app:layout_constraintBottom_toTopOf="@id/seek_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_song_singer" />

        <ImageView
            android:id="@+id/image_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:src="@drawable/ic_share_black"
            app:layout_constraintBottom_toTopOf="@id/seek_bar"
            app:layout_constraintLeft_toRightOf="@id/image_download"
            app:layout_constraintTop_toBottomOf="@id/text_song_singer" />

        <ImageView
            android:id="@+id/image_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:src="@drawable/ic_play_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/image_repeat"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_24"
            android:src="@drawable/ic_repeat"
            app:layout_constraintBottom_toBottomOf="@id/image_play"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_play" />

        <ImageView
            android:id="@+id/image_shuffle"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_24"
            android:src="@drawable/ic_shuffle"
            app:layout_constraintBottom_toBottomOf="@id/image_play"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_play" />

        <ImageView
            android:id="@+id/image_next"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@id/image_play"
            app:layout_constraintLeft_toRightOf="@id/image_play"
            app:layout_constraintRight_toLeftOf="@id/image_repeat"
            app:layout_constraintTop_toTopOf="@id/image_play" />

        <ImageView
            android:id="@+id/image_previous"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_previous"
            app:layout_constraintBottom_toBottomOf="@id/image_play"
            app:layout_constraintLeft_toRightOf="@id/image_shuffle"
            app:layout_constraintRight_toLeftOf="@id/image_play"
            app:layout_constraintTop_toTopOf="@id/image_play" />

        <TextView
            android:id="@+id/text_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:fontFamily="sans-serif"
            android:text="@string/default_duration"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/image_play"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:fontFamily="sans-serif"
            android:text="@string/default_duration"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/image_play"
            app:layout_constraintRight_toRightOf="parent" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:progressBackgroundTint="@android:color/black"
            android:progressTint="@android:color/black"
            android:thumbTint="@android:color/holo_red_dark"
            app:layout_constraintBottom_toTopOf="@+id/image_play"
            app:layout_constraintLeft_toRightOf="@+id/text_current_time"
            app:layout_constraintRight_toLeftOf="@+id/text_duration" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_schedule_contain"
            android:layout_width="@dimen/dp_250"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@drawable/shape_gray_border"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_playing_gif">

            <TextView
                android:id="@+id/text_schedule_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/media_time_schedule"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                app:layout_constraintBottom_toBottomOf="@id/text_schedule_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_schedule_title" />

            <RadioGroup
                android:id="@+id/radio_group_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_schedule_title">

                <RadioButton
                    android:id="@+id/radio_ten_seconds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media_time_ten_seconds" />

                <RadioButton
                    android:id="@+id/radio_twenty_seconds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media_time_twenty_seconds" />

                <RadioButton
                    android:id="@+id/radio_one_minute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media_time_one_minute" />

                <RadioButton
                    android:id="@+id/radio_two_minutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media_time_two_minutes" />
            </RadioGroup>

            <Button
                android:id="@+id/button_allow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_allow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group_schedule" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
